--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -134,13 +134,6 @@
             <version>1.4.7</version>
         </dependency>
 
-        <!-- knife4j -->
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
-            <version>3.0.3</version>
-        </dependency>
-
         <!-- aspectj -->
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -198,12 +191,6 @@
             <version>0.4.9</version>
         </dependency>
 
-        <!-- swagger -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>spring-boot-springdoc</artifactId>
-            <version>3.1.2</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -244,6 +231,11 @@
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.10.1</version>
             </plugin>
         </plugins>
     </build>
